--- a/src/pages/create_flashcard/page1.css
+++ b/src/pages/create_flashcard/page1.css
@@ -163,9 +163,10 @@ label{
     height: auto;
     width: auto;
     padding: 8px 8px 8px 8px;
+    font-size: 15px;
 }
 .term-imgs{
-    margin-left: 42px;
+    margin-left: 34px;
     height: 60px;
     width: auto;
     margin-top : 18px;
@@ -187,4 +188,76 @@ label{
 
 .i{
     color: #9e9e9e;
+}
+
+.btn-img{
+    display: inline-flex;
+    align-items: center;
+}
+.edit-btn-div{
+    margin-left: 45px;
+}
+
+.delete-div{
+    padding-top: 16px;
+    padding-right: 0px;
+    padding-left: 40px;
+}
+
+@media (max-width:576px) {
+    .def{
+        width:fit-content;
+    }
+}
+
+@media (max-width:1024px){
+    .ti-btn{
+        font-size: 14px;
+    }
+}
+
+@media (max-width:768px) {
+    .term-box{
+        align-items: center;
+    }
+    .def-img{
+        align-items: center;
+    }
+}
+
+@media (max-width : 426px) {
+    .term-box{
+        font-size: 15px;
+        padding-left: 0px;
+        margin-left: 0px;
+        margin-right: 15px;
+    }
+    .def-img{
+        align-items: end !important;
+        padding-right: 0px;
+    }
+    .ti-btn{
+        font-size: 12px;
+        padding: 6px;
+    }
+    .btn-img{
+        justify-content: start;
+        margin-right: 43px;
+    }
+    .delete-div{
+        justify-content: center !important;
+    }
+}
+
+@media (max-width:376px) {
+    .def-img{
+        padding-right: 0px;
+        margin-left: 52px;
+    }
+    .def{
+        padding-left: 18px;
+    }
+    .defInput{
+        width: 179px;
+    }
 }
